Improve pagination index calculation

--- a/Front-end/index.html
+++ b/Front-end/index.html
@@ -145,7 +145,7 @@
                 ← Précédent
             </button>
 
-            <span id="top-page-info" class="text-zinc-800 text-sm md:text-base font-medium flex items-center">1/7</span>
+            <span id="top-page-info" class="text-zinc-800 text-sm md:text-base font-medium flex items-center">Page 1</span>
 
             <button id="top-next" 
                     class="flex items-center bg-yellow-400 hover:bg-yellow-200 text-zinc-800 px-6 md:px-8 py-2 md:py-3 rounded-full text-sm md:text-base font-semibold shadow-md transition-colors">
@@ -261,7 +261,7 @@
                 ← Précédent
             </button>
 
-            <span id="action-page-info" class="text-zinc-800 text-sm md:text-base font-medium flex items-center">1/7</span>
+            <span id="action-page-info" class="text-zinc-800 text-sm md:text-base font-medium flex items-center">Page 1</span>
 
             <button id="action-next" 
                     class="flex items-center bg-yellow-400 hover:bg-yellow-200 text-zinc-800 px-6 md:px-8 py-2 md:py-3 rounded-full text-sm md:text-base font-semibold shadow-md transition-colors">
@@ -377,7 +377,7 @@
                 ← Précédent
             </button>
 
-            <span id="comedy-page-info" class="text-zinc-800 text-sm md:text-base font-medium flex items-center">1/7</span>
+            <span id="comedy-page-info" class="text-zinc-800 text-sm md:text-base font-medium flex items-center">Page 1</span>
 
             <button id="comedy-next" 
                     class="flex items-center bg-yellow-400 hover:bg-yellow-200 text-zinc-800 px-6 md:px-8 py-2 md:py-3 rounded-full text-sm md:text-base font-semibold shadow-md transition-colors">
